--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ section {
 }
 
 .hero {
-  background-image: url("../images/hero-bg.jpeg");
+  background-image: url("../images/hero-image.jpg");
   height: 600px;
   background-size: cover;
   background-position: center;
