adding flexbox to contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ section {
   width: 40%;
   margin: 3.5%;
 }
+
 .hero-form h3 {
   font-size: x-large;
   margin: 0;
@@ -180,6 +181,7 @@ section {
 .secondary-border {
   border-color: #39a6b2;
 }
+
 .step {
   margin: 50px auto;
   padding-bottom: 50px;
@@ -203,6 +205,7 @@ section {
   flex-wrap: wrap;
   align-items: center;
 }
+
 .step-img {
   flex: 1 12%;
   margin-right: 20px;
@@ -213,7 +216,7 @@ section {
 }
 
 .step-text {
-flex: 12;
+  flex: 12;
 }
 
 .step-text p {
@@ -275,16 +278,18 @@ flex: 12;
   color: #fce138;
 }
 
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .contact-info iframe {
-  width: 400px;
   height: 400px;
 }
+
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
+
   color: white;
 }
 
@@ -297,8 +302,31 @@ flex: 12;
 .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
+}
+
+.contact-form input,
+.contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+
 }
 
 .contact-info a {
